--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     background-color: #F9003D;/*Altera a cor de fundo*/
 }
 .topo nav{
-    width: 100%; /* %, vw, em*/
+    width: 90%; /* %, vw, em*/
     max-width: 1200px;
     height: 60px;
     /* background-color: #000; */
@@ -52,7 +52,7 @@
     background-position: bottom;
 }
 .content{
-    width: 100%;
+    width: 90%;
     max-width: 1200px;
     height: 100%;
     /* background-color: rgba(204, 204, 204, 0.37); */
@@ -94,7 +94,7 @@
     background-color: #080324;
 }
 .sobre{
-    width: 100%;
+    width: 90%;
     max-width: 1200px;
     height: 100%;
     margin: 0 auto;
@@ -114,6 +114,7 @@
 }
 .conteudo_sobre img{
     width: 491px;
+    margin-right: 2em;
 }
 .texto_sobre{
     width: 600px;
@@ -148,7 +149,7 @@
     background-size: cover;
 }
 .info{
-    width: 100%;
+    width: 90%;
     max-width: 1200px;
     height: 100%;
     /* background-color: rgba(255, 255, 255, 0.253);s */
@@ -225,4 +226,54 @@
 
 }
 
-@media screen 
+@media screen and (max-width: 1200px){
+    .topo_nav {
+        width: 80%;
+    }
+    .content {
+        width: 80%;
+    }
+    .bk_sobre {
+        height: auto;
+        padding-bottom: 4em;
+    }
+    .conteudo_sobre {
+        flex-direction: column;
+    }
+    .conteudo_sobre img {
+        width: 600px;
+    }
+    .sobre {
+        width: 80%;
+        margin-bottom: 2em;
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+            }
+
+    .info_card p {
+        width: 220px;
+    }
+
+    .endereco {
+        height: auto;
+        padding: 3em 0;
+    }
+
+    .text-endereco {
+        width: 100%;
+        max-width: 900px;
+        height: auto;
+        flex-direction: column;
+        padding-left: 2em 2em;
+    }
+
+    .text-endereco p {
+        margin-left: unset;
+        margin-bottom: 2em;
+    }
+
+    .text-endereco img {
+        position: unset;
+    }
+}
